# backend-gistapi

./: Dockerfile  README.md  req2toml.py
gistapi/: gistapi.py  requirements.txt
gistapi/tests/: test_gistapi.py
myenv/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
myproject/: pyproject.toml
