[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["frchaves"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "22.2.0"
cachecontrol = "0.12.11"
certifi = "2022.12.7"
cleo = "2.0.1"
click = "^8.1.3"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.6"
dulwich = "0.20.50"
exceptiongroup = "1.1.0"
filelock = "3.9.0"
html5lib = "1.1"
idna = "3.4"
importlib-metadata = "6.0.0"
iniconfig = "2.0.0"
itsdangerous = "2.1.2"
jaraco-classes = "3.2.3"
jinja2 = "3.1.2"
jsonschema = "4.17.3"
keyring = "23.13.1"
lockfile = "0.12.2"
markupsafe = "2.1.2"
more-itertools = "9.0.0"
msgpack = "1.0.4"
packaging = "23.0"
pexpect = "4.8.0"
pkginfo = "1.9.6"
platformdirs = "2.6.2"
pluggy = "1.0.0"
poetry = "1.3.2"
poetry-core = "1.4.0"
poetry-plugin-export = "1.3.0"
ptyprocess = "0.7.0"
pyrsistent = "0.19.3"
pytest = "7.2.1"
pywin32-ctypes = "0.2.0"
rapidfuzz = "2.13.7"
requests = "2.28.1"
requests-toolbelt = "0.10.1"
shellingham = "1.5.0.post1"
six = "1.16.0"
tomli = "2.0.1"
tomlkit = "0.11.6"
trove-classifiers = "2023.2.8"
urllib3 = "1.26.14"
virtualenv = "20.19.0"
webencodings = "0.5.1"
werkzeug = "2.2.3"
zipp = "3.14.0"
flask = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
